feat(java): testing java 25
ref: #33865